<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ReclutApp.oficio.inicio.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_busqueda"
        android:name="com.example.ReclutApp.oficio.busqueda.BusquedaFragment"
        android:label="@string/title_busqueda"
        tools:layout="@layout/fragment_busqueda" />

    <fragment
        android:id="@+id/navigation_agregar"
        android:name="com.example.ReclutApp.oficio.agregar.AgregarFragment"
        android:label="@string/title_agregar"
        tools:layout="@layout/fragment_agregar" />


</navigation>