<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicioP">

    <fragment
        android:id="@+id/navigation_inicioP"
        android:name="com.example.ReclutApp.profesion.inicio.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_iniciopr" />

    <fragment
        android:id="@+id/navigation_busquedaP"
        android:name="com.example.ReclutApp.profesion.busqueda.BusquedaFragment"
        android:label="@string/title_busqueda"
        tools:layout="@layout/fragment_busquedapr" >

    </fragment>

    <fragment
        android:id="@+id/navigation_agregarP"
        android:name="com.example.ReclutApp.profesion.agregar.AgregarFragment"
        android:label="@string/title_agregar"
        tools:layout="@layout/fragment_agregarpr" >

    </fragment>


</navigation>