<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="354dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/boton_redondeadoo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textHome"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/NombreCompleto"
            android:textColor="@color/black"
            android:textSize="30dp">

        </TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Johan David de la Cruz Palmer"
            android:textColor="@color/black"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Edad"
            android:textColor="@color/black"
            android:textSize="30dp">

        </TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="21"
            android:textColor="@color/black"
            android:textSize="20dp"></TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Estado"
            android:textColor="@color/black"
            android:textSize="30dp">

        </TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Campeche"
            android:textColor="@color/black"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Municipio"
            android:textColor="@color/black"
            android:textSize="30dp">

        </TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Escárcega"
            android:textColor="@color/black"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/CodigoPos"
            android:textColor="@color/black"
            android:textSize="30dp">

        </TextView>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="24350"
            android:textColor="@color/black"
            android:textSize="20dp">

        </TextView>

    </LinearLayout>

</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>